namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-delius-alfresco-stage/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-delius-alfresco-stage"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "stage"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask-probation-hosting"
    cloud-platform.justice.gov.uk/application: "HMPPS Delius Alfresco"
    cloud-platform.justice.gov.uk/owner: "Hosting Migrations: team-migrations@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-delius-alfresco"
    cloud-platform.justice.gov.uk/team-name: "hosting-migrations,zaizi-devs"
    cloud-platform.justice.gov.uk/review-after: ""
